create all required APIs
